[package]
name = "hash-and-merkle"
version = "0.1.0"
edition = "2018"

[dependencies]
hex = "0.4" 
clap = { version = "<=4.4.12", features = ["derive"] }
icicle-core = {path = "../../../wrappers/rust/icicle-core" }
icicle-runtime = {path = "../../../wrappers/rust/icicle-runtime" }
icicle-hash = {path = "../../../wrappers/rust/icicle-hash" }
icicle-babybear = {path = "../../../wrappers/rust/icicle-fields/icicle-babybear" }
alloy-primitives = { version = "0.7.2", default-features = false, features = ["rand"] }
rand = "0.8.5"
megaeth-salt = { path = "/home/fft/workspace/mega/mega-reth/crates/salt/salt" }
reth-primitives-traits = { path = "/home/fft/workspace/mega/mega-reth/crates/primitives-traits", default-features = false }

[features]
cuda = ["icicle-runtime/cuda_backend",
        "icicle-babybear/cuda_backend",
        "icicle-hash/cuda_backend",            
]